this is broken cuz it will auto fail lol

--- a/.config stuff for repo and editor/.github/workflows/python-app.yml
+++ b/.config stuff for repo and editor/.github/workflows/python-app.yml
@@ -6,7 +6,7 @@ name: Final project music player application
 on:
   push:
     paths:
-    - '/TO DO'
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
